assets/style.css
body {
  margin: 0;
  padding: 0;
  color: #222;
  background: #fdfdfd;
  font-family: 'Noto Sans JP';
}

a {
  text-decoration: none;
  color: #136ecb;
}
a:hover,
a:focus {
  text-decoration: underline;
}

.wrapper {
  margin: 0 auto;
  padding: 0px 12px;
  -webkit-font-smoothing: antialiased;
}

.nav {
  margin-top: 5px;
  padding-bottom: 5px;
  display: flex;
  align-items: center;
  border-bottom: 1px #ccc solid;
}
.nav ul {
  list-style: none;
  margin: 0px 2px;
  padding: 0px;
  overflow: hidden;
  font-size: 110%;
}
.nav li {
  float: left;
  margin: 0px;
  padding-left: 6px;
}

.site-title {
  font-size: 110%;
  font-weight: 900;
  margin: 0px;
}
.site-title a {
  color: #444;
  transition: color .2s;
}
.site-title a:hover {
  color: #ff2d55;
  text-decoration: none;
}
.tag-title {
  font-size: 165%;
  margin-bottom: 10px;
}

.divider {
  padding-left: 6px;
  color: #888;
}

.tw {
  color: #444;
  font-size: 90%;
  font-weight: 600;
}

.tl {
  padding-left: 0px;
  list-style-type: none;
}
.tl > a:hover {
  text-decoration: none;
}
.tl li {
  border-left: 1px solid #ccc;
}
.tl li:hover {
  border-left: 1px solid #ff2d55;
}
.tl li:focus {
  outline: thin dotted;
}
.tl li.active {
  border-left: 2px solid #ff2d55;
}
.tl-node {
  margin-bottom: 8px;
  display: flex;
  align-items: flex-start;
}
.tl-node > img {
  padding-left: 4px;
  margin-right: 10px;
  width: 48px;
}
.tl-body {
  flex: 1;
}
.tl-body > .date {
  font-size: 85%;
  color: #777;
}

.ep-count {
  font-size: 80%;
  color: #777;
  text-align: right;
}
.ep-count span {
  color: #ff2d55;
}

.post h1 {
  font-size: 130%;
  margin-bottom: 0px;
}
.post h2 {
  font-size: 125%;
  padding-bottom: 4px;
  border-bottom: 1px solid #ccc;
}
.post h3 {
  font-size: 110%;
}
.post p {
  line-height: 26px;
}
.post .content ul {
  padding-left: 22px;
}
.post .content img {
  width: 100%;
}
.post .published {
  font-size: 90%;
  color: #444;
}
.post .adjacent-posts {
  font-size: 105%;
  margin: 20px 0px;
  overflow: auto;
}
.post .adjacent-posts a {
  width: 50%;
}
.post .prev {
  float: left;
}
.post .next {
  float: right;
  text-align: right;
}
.post .wine-list {
  padding: 8px 14px;
  background: #eee;
}
.post .spec {
  background: #eee;
  outline: 1px solid #bbb;
  padding: 5px;
  line-height: 16px;
}

@media (min-width: 1025px) {
  .wrapper {
    width: 720px;
  }
  .nav h1 {
    font-size: 90%;
  }
  .nav ul {
    font-size: 85%;
  }
  .tag-title {
    font-size: 190%;
  }
  .tl-node > img {
    width: 57px;
  }
  .tl-body {
    font-size: 105%;
  }
  .post .content ul {
    padding-left: 30px;
  }
  .post .adjacent-posts {
    font-size: 90%;
  }
}

